--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-spring.application.name=EndTerm
+spring.application.name=MidtermSWDev
 server.port=8009
 
-spring.docker.compose.enabled=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/midterm
 spring.datasource.username=postgres
 spring.datasource.password=gg25121326
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
 
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
