--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.name=MidtermSWDev
 server.port=8009
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/midterm
@@ -9,3 +8,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.docker.compose.enabled=false
